<resources>
    <string name="app_name">Calculator</string>
    <string name="divide">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="multiply">*</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="subtract">-</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="clear">CLR</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="cut">C</string>
    <string name="sin">Sin</string>
    <string name="tan">Tan</string>
    <string name="cos">Cos</string>
    <string name="log">Log</string>
    <string name="ln">ln</string>
    <string name="fact">x!</string>
    <string name="sqrt">√</string>
    <string name="inv">1/x</string>
    <string name="pi">π</string>
    <string name="percent">%</string>
</resources>